fix the overflow width problem

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -414,7 +414,8 @@ header {
 
 hr.line {
 	width: 100%;
-	border: 2px solid;
+	border-top: 2px solid;
+   border-bottom: 2px solid;
 }
 
 .purple {
